# DISTRHO-Ports

./: .gitignore  .gitmodules  .travis.yml  Makefile  README  README.md  TODO  meson.build  meson_options.txt  mod_build
libs/: meson.build
libs/dgl/: Makefile
libs/dgl/src/: ImageSlider.cpp
libs/distrho/src/: DistrhoPluginLV2export.cpp  DistrhoUIInternal.hpp  DistrhoUILV2.cpp
libs/drowaudio/: meson.build
libs/drowaudio/build-drowaudio/: AppConfig.h  premake.lua
libs/drowaudio/source/: README.md  dRowAudio.h  juce_module_info
libs/juce/: meson.build
libs/juce-current/: AppConfig.h  meson.build
libs/juce-current/patches/: 01_audiodevicemanager-prefer-jack-over-alsa.patch  03_fix-midi-message-constness.patch  04_vst2-interface.patch  04_vst2-interface_pt2.patch  05_mingw-fixes.patch  06_old-compiler-compatibility.patch  07_allow-local-ladspa.patch  08_remove-splashscreen.patch  09_proper-getExecutableFile.patch  10_fix-fork-exec-usage.patch  11_childprocess-getPID.patch  12_linux-filechooser-needs-modal-loops.patch  13_dialogwindow-allow-native-titlebar.patch  14_fix-x11-temporary-windows.patch  15_fix-linux-thread-prio.patch  15_fix-usage-with-vestige.patch  16_lv2-string-state.patch  17_allow-vst2-without-audio.patch  17_dynamic-vst2-plugin-name.patch  18_dynamic-vst2-plugin-name.patch  18_fix-vst2-linux-gui-init.patch  20_audioprocessor-no-gui.patch  21_audioprocessor-no-gui.patch  22_mingw-filechooser-no-vista.patch  23_fix-juce-includes.patch  24_extra-gl-functions.patch  24_vital-needed-changes.patch  24_vital-needed-changes_pt3.patch  25_x11-crash-on-close-workaround.patch  audiodevicemanager_prefer-jack-over-alsa.patch  audioprocessors_lv2-string-state.patch  audioprocessors_lv2type.patch  audioprocessors_no-splash-screen.patch  audioprocessors_no-splash-screen_pt2.patch  audioprocessors_nogui.patch  childprocess_getpid.patch  dialogwindow_allow-native-titlebar.patch  fix-for-temporary-windows.patch  fix-linux-thread-priorities.patch  fix-midi-message-constness.patch  (+12 more)
libs/juce-current/source/: README.md
libs/juce-legacy/: AppConfig.h  Makefile  meson.build  premake.lua
libs/juce-legacy/build-juce/: premake.lua
libs/juce-legacy/source/: README.md
libs/juce-plugin/: AppConfig.h  JucePluginMain.cpp  JucePluginMain.h  JucePluginUtils.cpp
libs/juce-plugin/juce-legacy/: AppConfig.h
libs/juce/build-juce/: AppConfig.h  premake.lua
libs/juce/patches/: _misc-changes.patch  audiodevicemanager_prefer-jack-over-alsa.patch  audioprocessor_changes.patch  audioprocessor_lv2-string-state.patch  audioprocessors_lv2-string-state.patch  audioprocessors_nogui.patch  audioprocessors_nogui2.patch  childprocess_getpid.patch  core_always-print-leak-objs.patch  dialogwindow_allow-native-titlebar.patch  use_vfork.patch  (+23 more)
libs/juce5/: meson.build
libs/juce6/: meson.build
libs/juce6.0/: meson.build
libs/juce6.1/: AppConfig.h  meson.build
libs/juce7/: AppConfig.h  meson.build
libs/juced/: meson.build
libs/lv2-ttl-generator/: GNUmakefile  lv2_ttl_generator.cpp  meson.build
libs/mingw-std-threads/: condition_variable  future  invoke  latch  mutex  shared_mutex  thread
ports-juce5/: meson.build
ports-juce5/LUFSMeter/: meson.build
ports-juce5/LUFSMeter-Multi/: meson.build  source
ports-juce5/arctican-function/: meson.build
ports-juce5/arctican-pilgrim/: meson.build
ports-juce5/dexed/: meson.build
ports-juce5/drowaudio-common/: dRowAudio_TappedDelayLine.cpp
ports-juce5/drowaudio-distortion/: meson.build
ports-juce5/drowaudio-distortionshaper/: meson.build
ports-juce5/drowaudio-flanger/: meson.build
ports-juce5/drowaudio-reverb/: meson.build
ports-juce5/drowaudio-tremolo/: meson.build
ports-juce5/drumsynth/: meson.build
ports-juce5/klangfalter/: meson.build
ports-juce5/luftikus/: meson.build
ports-juce5/obxd/: meson.build
ports-juce5/stereosourceseparation/: meson.build
ports-juce5/tal-dub-3/: meson.build
ports-juce5/tal-filter/: meson.build
ports-juce5/tal-filter-2/: meson.build
ports-juce5/tal-noisemaker/: meson.build
ports-juce5/tal-reverb/: meson.build
ports-juce5/tal-reverb-2/: meson.build
ports-juce5/tal-reverb-3/: meson.build
ports-juce5/tal-vocoder-2/: meson.build
ports-juce5/temper/: meson.build
ports-juce5/vex/: meson.build
ports-juce5/wolpertinger/: meson.build
ports-juce6/: meson.build
ports-juce6/chow/: PluginProcessor.h
ports-juce6/roth-air/: BinaryData.cpp  BinaryData.h  Compressor.cpp  Compressor.h  JuceHeader.h  JucePluginCharacteristics.h  PluginEditor.h  PluginProcessor.h  SideChain.cpp  WaveShaper.h  meson.build
ports-juce6/swankyamp/: meson.build
ports-juce6/vitalium/: BinaryData.cpp  JuceHeader.h  JucePluginCharacteristics.h  meson.build
ports-legacy/: Makefile  meson.build
ports-legacy/HiReSam/: meson.build
ports-legacy/LUFSMeter/: meson.build
ports-legacy/LUFSMeter-Multi/: meson.build
ports-legacy/arctican-function/: meson.build
ports-legacy/arctican-pilgrim/: meson.build
ports-legacy/dexed/: meson.build
ports-legacy/drowaudio-distortion/: meson.build
ports-legacy/drowaudio-distortionshaper/: meson.build
ports-legacy/drowaudio-flanger/: meson.build
ports-legacy/drowaudio-reverb/: meson.build
ports-legacy/drowaudio-tremolo/: meson.build
ports-legacy/drumsynth/: meson.build
ports-legacy/easySSP/: meson.build
ports-legacy/eqinox/: meson.build
ports-legacy/juce-opl/: meson.build
ports-legacy/klangfalter/: meson.build
ports-legacy/luftikus/: meson.build
ports-legacy/obxd/: meson.build
ports-legacy/pitchedDelay/: meson.build
ports-legacy/refine/: meson.build
ports-legacy/stereosourceseparation/: meson.build
ports-legacy/tal-dub-3/: meson.build
ports-legacy/tal-filter/: meson.build
ports-legacy/tal-filter-2/: meson.build
ports-legacy/tal-noisemaker/: meson.build
ports-legacy/tal-reverb/: meson.build
ports-legacy/tal-reverb-2/: meson.build
ports-legacy/tal-reverb-3/: meson.build
ports-legacy/tal-vocoder-2/: meson.build
ports-legacy/temper/: meson.build
ports-legacy/vex/: meson.build
ports-legacy/wolpertinger/: meson.build
(+1541 files in other folders)
