option('optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable SSE2 optimizations',
)

option('linux-embed',
    type: 'boolean',
    value: false,
    description: 'DSP-only plugin builds, without editor/GUI',
)

option('build-lv2',
    type: 'boolean',
    value: true,
    description: 'Build LV2 plugin variants',
)

option('build-vst2',
    type: 'boolean',
    value: true,
    description: 'Build VST2 plugin variants',
)

option('build-vst3',
    type: 'boolean',
    value: true,
    description: 'Build VST3 plugin variants',
)

option('build-legacy-only',
    type: 'boolean',
    value: false,
    description: 'Build only legacy libraries and plugins',
)

option('plugins',
    type : 'array',
    description: 'Plugins to build',
    choices : [
        'chow',
        'arctican-function',
        'arctican-pilgrim',
        'dexed',
        'drowaudio-distortion',
        'drowaudio-distortionshaper',
        'drowaudio-flanger',
        'drowaudio-reverb',
        'drowaudio-tremolo',
        'drumsynth',
        'easySSP',
        'eqinox',
        'HiReSam',
        'juce-opl',
        'klangfalter',
        'LUFSMeter',
        'LUFSMeter-Multi',
        'luftikus',
        'obxd',
        'pitchedDelay',
        'refine',
        'stereosourceseparation',
        'tal-dub-3',
        'tal-filter',
        'tal-filter-2',
        'tal-noisemaker',
        'tal-reverb',
        'tal-reverb-2',
        'tal-reverb-3',
        'tal-vocoder-2',
        'temper',
        'vex',
        'wolpertinger',
    ],
)
