option('optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable various math-related optimizations',
)

option('lto-optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable LTO optimizations',
)

option('sse-optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable SSE optimizations',
)

option('linux-embed',
    type: 'boolean',
    value: false,
    description: 'DSP-only plugin builds, without editor/GUI',
)

option('build-lv2',
    type: 'boolean',
    value: true,
    description: 'Build LV2 plugin variants',
)

option('build-vst2',
    type: 'boolean',
    value: true,
    description: 'Build VST2 plugin variants',
)

option('build-vst3',
    type: 'boolean',
    value: true,
    description: 'Build VST3 plugin variants',
)

option('build-juce5-only',
    type: 'boolean',
    value: false,
    description: 'Build only juce5 libraries and plugins',
)

option('build-juce6-only',
    type: 'boolean',
    value: false,
    description: 'Build only juce6 libraries and plugins',
)

option('build-juce7-only',
    type: 'boolean',
    value: false,
    description: 'Build only juce7 libraries and plugins',
)

option('build-universal',
    type: 'boolean',
    value: false,
    description: 'Build macOS universal binaries',
)

option('plugins',
    type : 'array',
    description: 'Plugins to build',
    choices : [
        # juce5
        'arctican-function',
        'arctican-pilgrim',
        'dexed',
        'drowaudio-distortion',
        'drowaudio-distortionshaper',
        'drowaudio-flanger',
        'drowaudio-reverb',
        'drowaudio-tremolo',
        'drumsynth',
        'easySSP',
        'eqinox',
        'HiReSam',
        'juce-opl',
        'klangfalter',
        'LUFSMeter',
        'LUFSMeter-Multi',
        'luftikus',
        'obxd',
        'pitchedDelay',
        'refine',
        'stereosourceseparation',
        'tal-dub-3',
        'tal-filter',
        'tal-filter-2',
        'tal-noisemaker',
        'tal-reverb',
        'tal-reverb-2',
        'tal-reverb-3',
        'tal-vocoder-2',
        'temper',
        'vex',
        'wolpertinger',
        # juce6
        'swankyamp',
        'vitalium',
    ],
)
