###############################################################################

subdir('drowaudio')
subdir('juced')
subdir('juce-legacy')
subdir('lv2-ttl-generator')

if not build_legacy_only
    subdir('juce-current')
endif

###############################################################################
